--- a/lone-movie-server/requirements.txt
+++ b/lone-movie-server/requirements.txt
@@ -1,17 +1,38 @@
+alembic==1.4.2
+async-timeout==4.0.2
 bidict==0.22.0
-click==8.1.3
+cffi==1.14.5
+click==7.1.2
+cryptography==3.4.7
+Deprecated==1.2.13
 dnspython==1.16.0
 eventlet==0.30.2
-Flask==2.1.2
+Flask==1.1.2
+Flask-Cors==3.0.8
+Flask-Login==0.5.0
+Flask-Migrate==2.5.3
+flask-redis==0.4.0
 Flask-SocketIO==5.2.0
+Flask-SQLAlchemy==2.4.3
 greenlet==1.1.2
-gunicorn==20.1.0
-importlib-metadata==4.11.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
+gunicorn==20.0.4
+importlib-metadata==4.12.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Mako==1.1.3
+MarkupSafe==1.1.1
+packaging==21.3
+pycparser==2.20
+PyMySQL==0.10.1
+pyparsing==3.0.9
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+python-editor==1.0.4
 python-engineio==4.3.2
 python-socketio==5.6.0
-six==1.16.0
-Werkzeug==2.1.2
+redis==3.5.3
+six==1.15.0
+SQLAlchemy==1.3.18
+Werkzeug==1.0.1
+wrapt==1.14.1
 zipp==3.8.0
