--- a/lone-movie-client/package.json
+++ b/lone-movie-client/package.json
@@ -12,6 +12,8 @@
     "buefy": "^0.9.21",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "socket.io-client": "4.5.1",
+    "v-clipboard": "^2.2.3",
     "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
